# AstraAMR

./: .gitignore  PROJECT_CONTEXT_FOR_AI.md  README.md
src/astranav_bringup/: CMakeLists.txt  package.xml
src/astranav_bringup/launch/: qr_maze.launch.py  simulated_robot.launch.py
src/astranav_controller/: CMakeLists.txt  package.xml
src/astranav_controller/launch/: joystick.launch.py
src/astranav_description/: CMakeLists.txt  package.xml
src/astranav_description/launch/: display.launch.py  gazebo.launch.py
src/astranav_description/rviz/: display.rviz
src/astranav_description/urdf/: astranav.urdf.xacro  astranav_base.xacro  astranav_gazebo.xacro  astranav_ros2control.xacro  astranav_sensors.xacro  template.urdf
src/astranav_localization/: CMakeLists.txt  package.xml
src/astranav_localization/config/: amcl.yaml
src/astranav_localization/launch/: global_localization.launch.py
src/astranav_mapping/: CMakeLists.txt  package.xml
src/astranav_mapping/launch/: slam.launch.py
src/astranav_navigation/: CMakeLists.txt  package.xml
src/astranav_navigation/astranav_navigation/: waypoint_following.py
src/astranav_navigation/config/: controller_server.yaml  planner_server.yaml
src/astranav_navigation/launch/: navigation.launch.py
src/astranav_scripts/: package.xml  setup.cfg  setup.py
src/astranav_scripts/astranav_scripts/: Cleaning_with_battery.py  auto_dock_undock.py  auto_docking_with_battery.py  cleaning_rl_memory.json  detect_marker.py  docling_with_patrolling.py  final_battery_reading.json  maze_solver.py  read_camera.py  read_imu.py  (+1 more)
(+2 files in other folders)
